fix test page broken layout ?

--- a/testing/style.css
+++ b/testing/style.css
@@ -95,7 +95,7 @@ body {
 }
 
 .test > * > details > summary {
-	height: 100%;
+	/*height: 100%;*/
 	align-items: flex-end;
 }
 
